# GlobalGameJam2026

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  CREDITS.md  DATABASE_SCHEMA.md  FILE_INVENTORY.md  GameConcept.txt  GlobalGameJam2026 - Shortcut.lnk  HEARTBEAT_RESTORATION.md  INDEX.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  WORDPRESS_INTEGRATION.md  build-wasm.sh  generate_assets.py  rebuild-and-serve.sh  setup-wordpress.sh  test-api.sh
themathar_game/: .gitattributes  Cargo.toml
themathar_game/src/: api.rs  board.rs  config.rs  game.rs  heartbeat.rs  lib.rs  main.rs  player.rs  types.rs  ui.rs
themathar_game/src/ui/: cleanup.rs  credits.rs  game.rs  game_over.rs  lobby_browser.rs  lobby_waiting.rs  menu.rs  mod.rs  player_setup.rs
themathar_game/web/: index-wordpress.html  index.html  test.html  themathar_game.d.ts  themathar_game.js  themathar_game_bg.js  themathar_game_bg.wasm.d.ts
wordpress-plugin/themathar-game/: themathar-game.php
wordpress-plugin/themathar-game/includes/: class-database.php  class-game-state.php  class-rest-api.php
wordpress-plugin/themathar-game/templates/: game-page.php
