[package]
name = "themathar_game"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.18", features = ["bevy_render", "bevy_ui", "bevy_text", "bevy_core_pipeline", "jpeg"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Response", "Location", "Request", "RequestInit", "RequestMode",
    "console", "Headers"
] }
js-sys = "0.3"
rand = "0.9.2"

[profile.dev]
opt-level = 0
split-debuginfo = "packed"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
